Migrated WarpNextHotkey, and WorldMonitor for notification in case of world change.